modified html elements to solve issues related to project image covering up developed by heading. also added media queries for desktop resolutions. modified json file that now has img inline with paragraph

--- a/styles/base.css
+++ b/styles/base.css
@@ -35,7 +35,7 @@ a, a:link, a:active {
 
 a:hover {
   text-decoration: none;
-  color: white;
+  color: #B0B5B3;
 }
 
 a:visited {
